# pclref

./: CMakeLists.txt  README.md  doxygen.conf  format_1tbs.sh  format_allman.sh  fpfh_cdf.stats  fpfh_lrt.stats  fpfh_pca.stats  loc.sh  main.cc  prepare_mu.sh
configs/: cvfh.conf  harris_esf.conf  harris_fpfh.conf  harris_sc3d.conf  harris_shot.conf  harris_si.conf  harris_usc.conf  harris_vfh.conf  iss_esf.conf  iss_fpfh.conf  iss_fpfh_2.conf  iss_shot.conf  narf.conf  ourcvfh.conf  region_vfh.conf  sift_fpfh.conf  sift_vfh.conf  ss_fpfh.conf  uniform_fpfh.conf
configs-fast/: harris_fpfh.conf  harris_shot.conf  iss_fpfh.conf
core/: Arrays.cc  Arrays.h  CMakeLists.txt  Csv.cc  Csv.h  DataAccessor.cc  DataAccessor.h  DataMerge.cc  DataMerge.h  DataTable.cc  DataTable.h  DataView.cc  DataView.h  FileTools.cc  FileTools.h  Histogram.cc  Histogram.h  MersenneTwister.cc  MersenneTwister.h  PclRefLIB.cc  PclRefLIB.h  PointTypeWrappers.h
correspondences/: CMakeLists.txt  EstimateCorrespondences.cc  EstimateCorrespondences.h  GTCorrespondences.cc  GTCorrespondences.h  ICP.cc  ICP.h  MST.cc  MST.h  NDT.cc  NDT.h  PredictCorrespondences.cc  PredictCorrespondences.h  RANSAC.cc  RANSAC.h
features/: CMakeLists.txt  CVFHFeatures.cc  CVFHFeatures.h  ESFFeatures.cc  ESFFeatures.h  FPFHFeatures.cc  FPFHFeatures.h  GFPFHFeatures.h  NARFFeatures.cc  NARFFeatures.h  OURCVFHFeatures.cc  OURCVFHFeatures.h  SC3DFeatures.cc  SC3DFeatures.h  SHOTFeatures.cc  SHOTFeatures.h  SIFeatures.cc  SIFeatures.h  USCFeatures.cc  USCFeatures.h  VFHFeatures.cc  VFHFeatures.h
keypoints/: CMakeLists.txt  GrowingRegions.cc  GrowingRegions.h  Harris3DKeypoints.cc  Harris3DKeypoints.h  ISSKeypoints.cc  ISSKeypoints.h  KeypointClustering.cc  KeypointClustering.h  KeypointNeighborhood.cc  KeypointNeighborhood.h  NARFKeypoints.cc  NARFKeypoints.h  RandomKeypoints.cc  RandomKeypoints.h  SIFTKeypoints.cc  SIFTKeypoints.h  SSKeypoints.cc  SSKeypoints.h  UniformKeypoints.cc  UniformKeypoints.h
pcl_extensions/: CMakeLists.txt  correspondence_estimation_improved.h  correspondence_estimation_improved.hpp  esf_improved.h  esf_improved.hpp  flann_search_improved.h  flann_search_improved.hpp  general_pca.h  general_pca.hpp  generic_ransac_correspondence_rejector.h  sac_model_general_registration.h  sac_model_general_registration.hpp
pipeline/: CMakeLists.txt  Combiner.cc  Combiner.h  ParameterContext.h  ParameterTemplate.cc  ParameterTemplate.h  (+3 more)
(+98 files in other folders)
